fix nav shift on small phone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -164,7 +164,6 @@ body {
 #menu {
   left: -100%;
   position: fixed;
-  top: 60px;
   width: 100%;
   z-index: 30;
 }
